structoring swagger endponts
